# my-shelf

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: extract_text.py  main.py
tests/: test_extract_text.py  test_main.py
tests/files/: test.epub  test.txt
