[project]
name = "my-shelf"
version = "0.1.0"
description = "本棚管理システム"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf", # PDFテキスト抽出用
    "ebooklib", # EPUBテキスト抽出用
    "beautifulsoup4", # HTMLパース用
]

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
